# SimpleChat

./: .gitignore  CMakeLists.txt  build_run.sh  build_run_test1.sh  build_run_test2.sh  build_run_test3.sh  build_run_test4.sh  build_run_test5.sh  build_run_test6.sh  readme.md
src/: main.cpp
src/Controllers/: CMakeLists.txt  ChatController.cpp  ChatController.h
src/Core/: CMakeLists.txt  IChatTransport.h  MessageSerializer.cpp  MessageSerializer.h  RingTcpTransport.cpp  RingTcpTransport.h
src/UI/: CMakeLists.txt  SimpleChatMainWindow.cpp  SimpleChatMainWindow.h  SimpleChatMainWindow.ui
